sdk-docs_versioned_docs/version-19.0.0/enums/Types/ModuleIdEnum/ModuleIdEnum.md
---
id: "ModuleIdEnum"
title: "Enumeration: ModuleIdEnum"
sidebar_label: "ModuleIdEnum"
---

[types](../../../modules/Types/Types.md).ModuleIdEnum

## Enumeration Members

### Asset

• **Asset** = ``"asset"``

#### Defined in

[middleware/types.ts:1204](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1204)

___

### Authoritydiscovery

• **Authoritydiscovery** = ``"authoritydiscovery"``

#### Defined in

[middleware/types.ts:1198](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1198)

___

### Authorship

• **Authorship** = ``"authorship"``

#### Defined in

[middleware/types.ts:1182](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1182)

___

### Babe

• **Babe** = ``"babe"``

#### Defined in

[middleware/types.ts:1179](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1179)

___

### Balances

• **Balances** = ``"balances"``

#### Defined in

[middleware/types.ts:1183](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1183)

___

### Base

• **Base** = ``"base"``

#### Defined in

[middleware/types.ts:1220](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1220)

___

### Bridge

• **Bridge** = ``"bridge"``

#### Defined in

[middleware/types.ts:1194](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1194)

___

### Capitaldistribution

• **Capitaldistribution** = ``"capitaldistribution"``

#### Defined in

[middleware/types.ts:1205](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1205)

___

### Cddserviceproviders

• **Cddserviceproviders** = ``"cddserviceproviders"``

#### Defined in

[middleware/types.ts:1186](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1186)

___

### Checkpoint

• **Checkpoint** = ``"checkpoint"``

#### Defined in

[middleware/types.ts:1206](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1206)

___

### Committeemembership

• **Committeemembership** = ``"committeemembership"``

#### Defined in

[middleware/types.ts:1188](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1188)

___

### Compliancemanager

• **Compliancemanager** = ``"compliancemanager"``

#### Defined in

[middleware/types.ts:1207](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1207)

___

### Confidential

• **Confidential** = ``"confidential"``

#### Defined in

[middleware/types.ts:1228](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1228)

___

### Contracts

• **Contracts** = ``"contracts"``

#### Defined in

[middleware/types.ts:1224](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1224)

___

### Corporateaction

• **Corporateaction** = ``"corporateaction"``

#### Defined in

[middleware/types.ts:1208](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1208)

___

### Corporateballot

• **Corporateballot** = ``"corporateballot"``

#### Defined in

[middleware/types.ts:1209](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1209)

___

### Dividend

• **Dividend** = ``"dividend"``

#### Defined in

[middleware/types.ts:1229](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1229)

___

### Exemption

• **Exemption** = ``"exemption"``

#### Defined in

[middleware/types.ts:1230](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1230)

___

### Externalagents

• **Externalagents** = ``"externalagents"``

#### Defined in

[middleware/types.ts:1221](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1221)

___

### Finalitytracker

• **Finalitytracker** = ``"finalitytracker"``

#### Defined in

[middleware/types.ts:1231](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1231)

___

### Grandpa

• **Grandpa** = ``"grandpa"``

#### Defined in

[middleware/types.ts:1199](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1199)

___

### Historical

• **Historical** = ``"historical"``

#### Defined in

[middleware/types.ts:1200](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1200)

___

### Identity

• **Identity** = ``"identity"``

#### Defined in

[middleware/types.ts:1185](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1185)

___

### Imonline

• **Imonline** = ``"imonline"``

#### Defined in

[middleware/types.ts:1201](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1201)

___

### Indices

• **Indices** = ``"indices"``

#### Defined in

[middleware/types.ts:1181](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1181)

___

### Multisig

• **Multisig** = ``"multisig"``

#### Defined in

[middleware/types.ts:1193](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1193)

___

### Offences

• **Offences** = ``"offences"``

#### Defined in

[middleware/types.ts:1196](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1196)

___

### Permissions

• **Permissions** = ``"permissions"``

#### Defined in

[middleware/types.ts:1210](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1210)

___

### Pips

• **Pips** = ``"pips"``

#### Defined in

[middleware/types.ts:1211](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1211)

___

### Polymeshcommittee

• **Polymeshcommittee** = ``"polymeshcommittee"``

#### Defined in

[middleware/types.ts:1187](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1187)

___

### Polymeshcontracts

• **Polymeshcontracts** = ``"polymeshcontracts"``

#### Defined in

[middleware/types.ts:1225](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1225)

___

### Portfolio

• **Portfolio** = ``"portfolio"``

#### Defined in

[middleware/types.ts:1212](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1212)

___

### Preimage

• **Preimage** = ``"preimage"``

#### Defined in

[middleware/types.ts:1226](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1226)

___

### Protocolfee

• **Protocolfee** = ``"protocolfee"``

#### Defined in

[middleware/types.ts:1213](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1213)

___

### Randomnesscollectiveflip

• **Randomnesscollectiveflip** = ``"randomnesscollectiveflip"``

#### Defined in

[middleware/types.ts:1202](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1202)

___

### Relayer

• **Relayer** = ``"relayer"``

#### Defined in

[middleware/types.ts:1222](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1222)

___

### Rewards

• **Rewards** = ``"rewards"``

#### Defined in

[middleware/types.ts:1223](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1223)

___

### Scheduler

• **Scheduler** = ``"scheduler"``

#### Defined in

[middleware/types.ts:1214](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1214)

___

### Session

• **Session** = ``"session"``

#### Defined in

[middleware/types.ts:1197](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1197)

___

### Settlement

• **Settlement** = ``"settlement"``

#### Defined in

[middleware/types.ts:1215](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1215)

___

### Staking

• **Staking** = ``"staking"``

#### Defined in

[middleware/types.ts:1195](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1195)

___

### Statistics

• **Statistics** = ``"statistics"``

#### Defined in

[middleware/types.ts:1216](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1216)

___

### Sto

• **Sto** = ``"sto"``

#### Defined in

[middleware/types.ts:1217](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1217)

___

### Stocapped

• **Stocapped** = ``"stocapped"``

#### Defined in

[middleware/types.ts:1232](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1232)

___

### Sudo

• **Sudo** = ``"sudo"``

#### Defined in

[middleware/types.ts:1203](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1203)

___

### System

• **System** = ``"system"``

#### Defined in

[middleware/types.ts:1178](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1178)

___

### Technicalcommittee

• **Technicalcommittee** = ``"technicalcommittee"``

#### Defined in

[middleware/types.ts:1189](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1189)

___

### Technicalcommitteemembership

• **Technicalcommitteemembership** = ``"technicalcommitteemembership"``

#### Defined in

[middleware/types.ts:1190](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1190)

___

### Testutils

• **Testutils** = ``"testutils"``

#### Defined in

[middleware/types.ts:1227](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1227)

___

### Timestamp

• **Timestamp** = ``"timestamp"``

#### Defined in

[middleware/types.ts:1180](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1180)

___

### Transactionpayment

• **Transactionpayment** = ``"transactionpayment"``

#### Defined in

[middleware/types.ts:1184](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1184)

___

### Treasury

• **Treasury** = ``"treasury"``

#### Defined in

[middleware/types.ts:1218](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1218)

___

### Upgradecommittee

• **Upgradecommittee** = ``"upgradecommittee"``

#### Defined in

[middleware/types.ts:1191](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1191)

___

### Upgradecommitteemembership

• **Upgradecommitteemembership** = ``"upgradecommitteemembership"``

#### Defined in

[middleware/types.ts:1192](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1192)

___

### Utility

• **Utility** = ``"utility"``

#### Defined in

[middleware/types.ts:1219](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1219)
