sdk-docs_versioned_docs/version-25.0.x/enums/Types/ModuleIdEnum/ModuleIdEnum.md
---
id: "ModuleIdEnum"
title: "Enumeration: ModuleIdEnum"
sidebar_label: "ModuleIdEnum"
---

[types](../../../modules/Types/Types.md).ModuleIdEnum

Represents all known chain "pallets"

## Enumeration Members

### Asset

• **Asset** = ``"asset"``

#### Defined in

[middleware/types.ts:100621](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100621)

___

### Authoritydiscovery

• **Authoritydiscovery** = ``"authoritydiscovery"``

#### Defined in

[middleware/types.ts:100622](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100622)

___

### Authorship

• **Authorship** = ``"authorship"``

#### Defined in

[middleware/types.ts:100623](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100623)

___

### Babe

• **Babe** = ``"babe"``

#### Defined in

[middleware/types.ts:100624](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100624)

___

### Balances

• **Balances** = ``"balances"``

#### Defined in

[middleware/types.ts:100625](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100625)

___

### Base

• **Base** = ``"base"``

#### Defined in

[middleware/types.ts:100626](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100626)

___

### Bridge

• **Bridge** = ``"bridge"``

#### Defined in

[middleware/types.ts:100627](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100627)

___

### Capitaldistribution

• **Capitaldistribution** = ``"capitaldistribution"``

#### Defined in

[middleware/types.ts:100628](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100628)

___

### Cddserviceproviders

• **Cddserviceproviders** = ``"cddserviceproviders"``

#### Defined in

[middleware/types.ts:100629](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100629)

___

### Checkpoint

• **Checkpoint** = ``"checkpoint"``

#### Defined in

[middleware/types.ts:100630](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100630)

___

### Committeemembership

• **Committeemembership** = ``"committeemembership"``

#### Defined in

[middleware/types.ts:100631](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100631)

___

### Compliancemanager

• **Compliancemanager** = ``"compliancemanager"``

#### Defined in

[middleware/types.ts:100632](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100632)

___

### Confidential

• **Confidential** = ``"confidential"``

#### Defined in

[middleware/types.ts:100633](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100633)

___

### Confidentialasset

• **Confidentialasset** = ``"confidentialasset"``

#### Defined in

[middleware/types.ts:100634](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100634)

___

### Contracts

• **Contracts** = ``"contracts"``

#### Defined in

[middleware/types.ts:100635](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100635)

___

### Corporateaction

• **Corporateaction** = ``"corporateaction"``

#### Defined in

[middleware/types.ts:100636](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100636)

___

### Corporateballot

• **Corporateballot** = ``"corporateballot"``

#### Defined in

[middleware/types.ts:100637](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100637)

___

### Dividend

• **Dividend** = ``"dividend"``

#### Defined in

[middleware/types.ts:100638](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100638)

___

### Exemption

• **Exemption** = ``"exemption"``

#### Defined in

[middleware/types.ts:100639](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100639)

___

### Externalagents

• **Externalagents** = ``"externalagents"``

#### Defined in

[middleware/types.ts:100640](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100640)

___

### Finalitytracker

• **Finalitytracker** = ``"finalitytracker"``

#### Defined in

[middleware/types.ts:100641](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100641)

___

### Grandpa

• **Grandpa** = ``"grandpa"``

#### Defined in

[middleware/types.ts:100642](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100642)

___

### Historical

• **Historical** = ``"historical"``

#### Defined in

[middleware/types.ts:100643](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100643)

___

### Identity

• **Identity** = ``"identity"``

#### Defined in

[middleware/types.ts:100644](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100644)

___

### Imonline

• **Imonline** = ``"imonline"``

#### Defined in

[middleware/types.ts:100645](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100645)

___

### Indices

• **Indices** = ``"indices"``

#### Defined in

[middleware/types.ts:100646](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100646)

___

### Multisig

• **Multisig** = ``"multisig"``

#### Defined in

[middleware/types.ts:100647](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100647)

___

### Nft

• **Nft** = ``"nft"``

#### Defined in

[middleware/types.ts:100648](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100648)

___

### Offences

• **Offences** = ``"offences"``

#### Defined in

[middleware/types.ts:100649](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100649)

___

### Permissions

• **Permissions** = ``"permissions"``

#### Defined in

[middleware/types.ts:100650](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100650)

___

### Pips

• **Pips** = ``"pips"``

#### Defined in

[middleware/types.ts:100651](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100651)

___

### Polymeshcommittee

• **Polymeshcommittee** = ``"polymeshcommittee"``

#### Defined in

[middleware/types.ts:100652](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100652)

___

### Polymeshcontracts

• **Polymeshcontracts** = ``"polymeshcontracts"``

#### Defined in

[middleware/types.ts:100653](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100653)

___

### Portfolio

• **Portfolio** = ``"portfolio"``

#### Defined in

[middleware/types.ts:100654](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100654)

___

### Preimage

• **Preimage** = ``"preimage"``

#### Defined in

[middleware/types.ts:100655](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100655)

___

### Protocolfee

• **Protocolfee** = ``"protocolfee"``

#### Defined in

[middleware/types.ts:100656](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100656)

___

### Randomnesscollectiveflip

• **Randomnesscollectiveflip** = ``"randomnesscollectiveflip"``

#### Defined in

[middleware/types.ts:100657](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100657)

___

### Relayer

• **Relayer** = ``"relayer"``

#### Defined in

[middleware/types.ts:100658](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100658)

___

### Rewards

• **Rewards** = ``"rewards"``

#### Defined in

[middleware/types.ts:100659](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100659)

___

### Scheduler

• **Scheduler** = ``"scheduler"``

#### Defined in

[middleware/types.ts:100660](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100660)

___

### Session

• **Session** = ``"session"``

#### Defined in

[middleware/types.ts:100661](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100661)

___

### Settlement

• **Settlement** = ``"settlement"``

#### Defined in

[middleware/types.ts:100662](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100662)

___

### Staking

• **Staking** = ``"staking"``

#### Defined in

[middleware/types.ts:100663](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100663)

___

### Statetriemigration

• **Statetriemigration** = ``"statetriemigration"``

#### Defined in

[middleware/types.ts:100664](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100664)

___

### Statistics

• **Statistics** = ``"statistics"``

#### Defined in

[middleware/types.ts:100665](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100665)

___

### Sto

• **Sto** = ``"sto"``

#### Defined in

[middleware/types.ts:100666](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100666)

___

### Stocapped

• **Stocapped** = ``"stocapped"``

#### Defined in

[middleware/types.ts:100667](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100667)

___

### Sudo

• **Sudo** = ``"sudo"``

#### Defined in

[middleware/types.ts:100668](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100668)

___

### System

• **System** = ``"system"``

#### Defined in

[middleware/types.ts:100669](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100669)

___

### Technicalcommittee

• **Technicalcommittee** = ``"technicalcommittee"``

#### Defined in

[middleware/types.ts:100670](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100670)

___

### Technicalcommitteemembership

• **Technicalcommitteemembership** = ``"technicalcommitteemembership"``

#### Defined in

[middleware/types.ts:100671](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100671)

___

### Testutils

• **Testutils** = ``"testutils"``

#### Defined in

[middleware/types.ts:100672](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100672)

___

### Timestamp

• **Timestamp** = ``"timestamp"``

#### Defined in

[middleware/types.ts:100673](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100673)

___

### Transactionpayment

• **Transactionpayment** = ``"transactionpayment"``

#### Defined in

[middleware/types.ts:100674](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100674)

___

### Treasury

• **Treasury** = ``"treasury"``

#### Defined in

[middleware/types.ts:100675](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100675)

___

### Upgradecommittee

• **Upgradecommittee** = ``"upgradecommittee"``

#### Defined in

[middleware/types.ts:100676](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100676)

___

### Upgradecommitteemembership

• **Upgradecommitteemembership** = ``"upgradecommitteemembership"``

#### Defined in

[middleware/types.ts:100677](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100677)

___

### Utility

• **Utility** = ``"utility"``

#### Defined in

[middleware/types.ts:100678](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/middleware/types.ts#L100678)
